--- a/hw2/Netflix-2/Netflix.css
+++ b/hw2/Netflix-2/Netflix.css
@@ -1,7 +1,11 @@
+
 body {
         background-color: black;
         color: white;
         text-align: center;
+        font-family: Netflix Sans, Helvetica Neue, Segoe UI, Roboto, Ubuntu,
+        sans-serif;
+        
 }
 
 
