--- a/searchbook-hailey/search-book-hailey-jiang copy/src/app/components/wishlist/wishlist.component.css
+++ b/searchbook-hailey/search-book-hailey-jiang copy/src/app/components/wishlist/wishlist.component.css
@@ -1,13 +1,12 @@
 div {
+  margin-top: 10vh;
   width: 30vw;
+  height: 50vh;
 }
 
 section {
   width: 100%;
   display: flex;
-  justify-content: space-between;
-}
-button {
-  display: block;
-  border: none;
+  flex-direction: row;
+  justify-content: space-around;
 }
