--- a/searchbook-hailey/search-book-hailey-jiang copy/src/app/components/booklist/booklist.component.html
+++ b/searchbook-hailey/search-book-hailey-jiang copy/src/app/components/booklist/booklist.component.html
@@ -1,14 +1,21 @@
 <div>
-  <section *ngFor="let book of booklist$ | async" #book (click)="addBook(book.id)">
-      <div class="img-container">
-          <img src="{{book.picture}}" width='100px' alt="{{book.bookName}}">
-      </div>
-      <div class="content-container">
-          <h2>{{ book.bookName }}</h2>
-          <p>Publisher: {{ book.publisher }}</p>
-          <p>Published Date: {{ book.publishedDate }}</p>
-          <p>Description: {{ book.description }}</p>
-      </div>
-  </section>
+    <section *ngFor="let book of booklist$ | async" #book (click)="addBook(book.id)">
+        
+        
+        <div class="img-container">
+            <img src="{{book.picture}}" width='100%' alt="{{book.bookName}}">
+        </div>
+        <hr>
+        
+        
+        <div class="content-container">
+            <h2>{{ book.bookName }}</h2>
+            <p><b>Publisher:</b>{{book.publisher}}</p>
+            <p><b>Published Date:</b>{{book.publishedDate}}</p>
+            <p><b>Description:</b>{{book.description}}</p>
+            <h2>{{ book.bookName }}</h2>
+        </div>
+    
+    
+    </section>
 </div>
-<h1>Booklist.component.html</h1> 
