--- a/searchbook-hailey/search-book-hailey-jiang copy/src/app/components/search/search.component.css
+++ b/searchbook-hailey/search-book-hailey-jiang copy/src/app/components/search/search.component.css
@@ -1,12 +1,30 @@
 main {
   display: flex;
-  justify-content: space-between;
+  flex-direction: row;
+  justify-content: center;
 }
 
-.left {
-  width: 65vw;
+.search {
+  position: absolute;
+  height: 2.8vh;
+  width: 30vw;
 }
 
-.right {
-  width: 35vw;
+input {
+  width: 100%;
+  height: 100%;
+}
+
+.lists{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
+.booklist{
+  padding-left: 10vw;
+}
+
+.wishlist{
+  padding-right: 8vw;
 }
